fix(navigation): improve color contrast for navigation tabs (#1411)
* style(tabs): update color variables for navigation tabs in light and dark modes

* chore(tabs): update snapshot images for navigation tabs in light and dark modes

* style(tabs): enhance focus state styles for navigation tabs

* style(tabs): adjust padding and margin for navigation tab items

* style(tabs): add focus state styles for navigation tab items

* chore(tabs): update snapshot images for navigation tabs in light and dark modes

* style(tabs): add hover color variable and update hover styles for navigation tabs

* style(tabs): update focus state selector for navigation tab items to use focus-visible

* chore(tabs): update snapshot images for inline tabs in light and dark modes

* chore(tabs): remove outdated snapshot images for navigation tabs in light and dark modes

* chore(tabs): add new snapshot images for navigation tabs in light and dark modes

--- a/packages/core/src/components/tabs/navigation-tabs/navigation-tabs.scss
+++ b/packages/core/src/components/tabs/navigation-tabs/navigation-tabs.scss
@@ -25,7 +25,7 @@
     width: 100%;
     overflow-x: scroll;
     scrollbar-width: none;
-    gap: 16px; // Adds a gap between the tab items
+    gap: 16px;
 
     &::-webkit-scrollbar {
       display: none;
@@ -71,8 +71,18 @@
       background-color: var(--tds-folder-tabs-scroll-btn-background-active);
     }
 
-    &:focus {
+    &:focus::before {
+      content: '';
+      position: absolute;
+      left: 3px;
+      right: 3px;
+      top: 3px;
+      bottom: 3px;
       @include tds-focus-state;
+    }
+
+    &:focus {
+      outline: 0;
     }
 
     svg {
